[package]
name = "subject-teacher"
version = "0.1.0"
description = "전담교사 배치 프로그램"
authors = [""]
edition = "2021"

[lib]
name = "subject_teacher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
